--- a/estilos/home/header.css
+++ b/estilos/home/header.css
@@ -17,11 +17,12 @@
   align-items: center;
 }
 
-.header-conteudo ul {
+.header-menu{
   display: flex;
   flex-wrap: wrap;
   gap: 80px;
 }
+
 
 .header-menu a{
   position: relative;
@@ -50,55 +51,58 @@
   padding: 10px 38px;
   border: none;
   border-radius: 20px;
-  
+}
+
+.btn a {
+  color: var(--cor-1);
 }
 
 .btn:hover {
   box-shadow: 0px 0px 10px 1px #1dd81a8e;
 }
 
-@media (max-width:880px){
-  .header-conteudo {
-    justify-content: left;
-  }
-
-  .header-conteudo ul {
-    gap: 60px;
+.btn-mobile{
+  display: none;
 }
+
+@media (max-width:895px){
+  .btn{
+    display: none;
+  }
+}
+
+@media (max-width:630px){
+  .btn-mobile{
+    display: block;
+  }
+  .header-menu{
+    /*display: none; */
+    display: none;
+    position: absolute;
+    width: 100%;
+    top: 180px;
+    right: 0px;
+    background-color: var(--cor-4);
+    height: 100vh;
+    z-index: 1000;
+  }
 
   .header-menu a{
-    background-color: #d6d4d48e;
-    padding: 10px 16px;
-    border-radius: 4px;
+    display: block;
+    padding: 1rem 0;
+    margin: 0 1rem;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.5);
   }
 
-}
-
-@media (max-width:770px){
-
-
-}
-
-
-@media (max-width:620px){
-  .header-conteudo{
-    gap: 40px;
+  .nav.active .header-menu{
+    display: block;
   }
 
-  .header-conteudo ul {
-    gap: 30px;
-}
-}
+  .header-menu a::after{
+    background-color: var(--cor-2);
+  }
 
-@media (max-width:575px){
-  .header-conteudo ul {
-    gap: 10px;
-}
-
-@media (max-width: 420px){
-
-}
-  .header-conteudo ul {
-    gap: 30px;
-}
+  .header-menu a:hover::after{
+    width: 30%;
+  }
 }
