--- a/estilos/home/header.css
+++ b/estilos/home/header.css
@@ -1,7 +1,10 @@
 .header-container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 20px 20px;
+  padding-left: 0px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .header-logo {
@@ -15,6 +18,10 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
+}
+
+.nav{
+  padding-left: 20px;
 }
 
 .header-menu{
