--- a/estilos/home/header.css
+++ b/estilos/home/header.css
@@ -1,10 +1,10 @@
 .header-container {
   max-width: 1280px;
   margin: 0 auto;
-  padding-left: 0px;
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
+    padding-left: 0px;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
 
 .header-logo {
@@ -20,9 +20,7 @@
   align-items: center;
 }
 
-.nav{
-  padding-left: 20px;
-}
+
 
 .header-menu{
   display: flex;
@@ -78,31 +76,43 @@
   }
 }
 
+@media (max-width:712px){
+  .nav{
+    padding-left: 20px;
+  }
+}
+
 @media (max-width:630px){
   .btn-mobile{
     display: block;
   }
   .header-menu{
     /*display: none; */
-    display: none;
+    display: block;
     position: absolute;
     width: 100%;
     top: 180px;
     right: 0px;
     background-color: var(--cor-4);
-    height: 100vh;
+    transition: .6s;
     z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
   }
+
+  .nav.active .header-menu{
+    height: 50vh;
+    visibility: visible;
+    overflow-y: auto;
+  }
+
 
   .header-menu a{
     display: block;
     padding: 1rem 0;
     margin: 0 1rem;
     border-bottom: 2px solid rgba(0, 0, 0, 0.5);
-  }
-
-  .nav.active .header-menu{
-    display: block;
   }
 
   .header-menu a::after{
