--- a/estilos/home/header.css
+++ b/estilos/home/header.css
@@ -90,7 +90,7 @@
     width: 100%;
     top: 180px;
     right: 0px;
-    background-color: #78c6a3;
+    background-color: #57da9f;
     transition: .6s;
     z-index: 1000;
     height: 0px;
