--- a/estilos/home/header.css
+++ b/estilos/home/header.css
@@ -89,7 +89,7 @@
     width: 100%;
     top: 180px;
     right: 0px;
-    background-color: rgba(0, 0, 0, 0.438);
+    background-color: rgb(0 0 0 / 65%);
     backdrop-filter: blur(10px); /* PARA DEIXAR O DESFOQUE NO FUNDO DO MENU */
     transition: .6s;
     z-index: 1000;
