--- a/estilos/home/header.css
+++ b/estilos/home/header.css
@@ -1,10 +1,10 @@
 .header-container {
   max-width: 1280px;
   margin: 0 auto;
-    padding-left: 0px;
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+  padding-left: 0px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .header-logo {
@@ -20,21 +20,18 @@
   align-items: center;
 }
 
-
-
-.header-menu{
+.header-menu {
   display: flex;
   flex-wrap: wrap;
   gap: 80px;
 }
 
-
-.header-menu a{
+.header-menu a {
   position: relative;
   font-size: 1rem;
 }
 
-.header-menu a::after{
+.header-menu a::after {
   content: "";
   display: block;
   height: 2px;
@@ -45,7 +42,7 @@
   position: absolute;
 }
 
-.header-menu a:hover::after{
+.header-menu a:hover::after {
   width: 100%;
 }
 
@@ -66,28 +63,23 @@
   box-shadow: 0px 0px 10px 1px #1dd81a8e;
 }
 
-.btn-mobile{
+.btn-mobile {
   display: none;
 }
 
-@media (max-width:895px){
-  .btn{
+@media (max-width: 895px) {
+  .btn {
     display: none;
   }
 }
 
-@media (max-width:712px){
-  .nav{
-    padding-left: 20px;
-  }
-}
 
-@media (max-width:715px){
-  .header-container{
+@media (max-width: 715px) {
+  .header-container {
     border-bottom: 1.5px solid #1dd81a8e;
   }
-  
-  .header-menu{
+
+  .header-menu {
     display: block;
     position: absolute;
     width: 100%;
@@ -95,21 +87,20 @@
     right: 0px;
     background-color: rgb(0 0 0 / 85%);
     backdrop-filter: blur(10px); /* PARA DEIXAR O DESFOQUE NO FUNDO DO MENU */
-    transition: .6s;
+    transition: 0.6s;
     z-index: 1000;
     height: 0px;
-    visibility: hidden;
-    overflow-y: hidden;
+    visibility: hidden; /* PARA ESCONDER O MENU ATÉ QUE A FUNÇÃO DO NAV.ACTIVE SEJA FEITA */
+    overflow-y: hidden; /* PARA ESCONDER O MENU ATÉ QUE A ANIMAÇÃO DO NAV.ACTIVE SEJA FEITA */
   }
 
-  .nav.active .header-menu.active{
+  .nav.active .header-menu {
     height: 100vh;
     visibility: visible;
     overflow-y: auto;
   }
 
-
-  .header-menu a{
+  .header-menu a {
     display: block;
     padding: 1rem 0;
     margin: 0 1rem;
@@ -117,55 +108,61 @@
     border-bottom: 2px solid rgba(0, 0, 0, 0.5);
   }
 
-  .header-menu a::after{
+  .header-menu a::after {
     background-color: var(--cor-2);
   }
 
-  .header-menu a:hover::after{
+  .header-menu a:hover::after {
     width: 30%;
   }
 
-
-  .btn-mobile{
+  .btn-mobile {
     color: var(--cor-1);
     font-weight: 600;
     display: flex;
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
     font-size: 1rem;
     border: none;
     background: none;
     cursor: pointer;
-    gap: .5rem;
+    gap: 0.5rem;
   }
 
-  .hamburguer{
+  .hamburguer {
     color: var(--cor-1);
     display: block;
     border-top: 2px solid;
     width: 20px;
   }
 
-  .hamburguer::after, .hamburguer::before{
+  .hamburguer::after,
+  .hamburguer::before {
     content: "";
     display: block;
     width: 20px;
     height: 2px;
-    background: currentColor;  /* PARA COPIAR A COR QUE A GENTE ESCOLHEU NO HAMBUMERGUER*/
+    background: currentColor; /* PARA COPIAR A COR QUE A GENTE ESCOLHEU NO HAMBUMERGUER, ASSIM MUDA AS CORES DOS 3 TRACINHOS DE UMA VEZ*/
     margin-top: 5px;
-    transition: .3s;
-    position: relative;
+    transition: 0.3s;
+    position: relative; /* PARA CONSEGUIRMOS MANIPULAR O TOP DO AFTER, PARA ROTACIONAR OS TRACINHOS PARA VIRAR UM X */
   }
 
-  .nav.active .hamburguer{
-    border-top-color: transparent;
+  .nav.active .hamburguer {
+    border-top-color: transparent; /* PARA SUMIR O TRACINHO DE CIMA */
   }
 
-  .nav.active .hamburguer::before{
+  .nav.active .hamburguer::before {
     transform: rotate(135deg); /* PARA FAZER A ROTAÇÃO DO X */
   }
 
-  .nav.active .hamburguer::after{
+  .nav.active .hamburguer::after {
     transform: rotate(-135deg); /* PARA FAZER A ROTAÇÃO DO X */
-    top: -7px;
+    top: -7px; /* PARA DEIXAR ELE NA ALTURA PERFEITA PAR VIRAR UM X, PORQUE SE NÃO DIMINUIR O TOP VAI FICAR MAIS PRA BAIXO O TRAÇO */
+  }
+}
+
+@media (max-width: 712px) {
+  .nav {
+    padding-left: 20px;
   }
 }
