--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,6 +2,7 @@
 
 @import "./home/header.css";
 @import "./home/inicio.css";
+@import "./home/especialidades.css";
 
 @import "./global/ultilidades/tipografia.css";
 @import "./global/ultilidades/colors.css";
