--- a/estilos/home/inicio.css
+++ b/estilos/home/inicio.css
@@ -6,10 +6,11 @@
 
 .inicio-conteudo{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   gap: 240px;
-  margin-top: 80px;
   align-items: center;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .inicio-conteudo h1{
@@ -34,10 +35,23 @@
   color: var(--cor-1);
 }
 
-@media (max-width: 900px){
+@media (max-width: 1130px){
+  .inicio-conteudo{
+    gap: 60px;
+  }
+}
+
+@media (max-width: 935px) {
+  .inicio-conteudo .btn {
+    display: none;
+  }
+}
+
+
+@media (max-width: 940px){
   .inicio-conteudo{
     grid-template-columns: 1fr;
-    gap: 20px;
+    gap: 0px;
   }
 
   .inicio-conteudo h1{
