--- a/estilos/home/header.css
+++ b/estilos/home/header.css
@@ -85,7 +85,7 @@
     width: 100%;
     top: 180px;
     right: 0px;
-    background-color: rgb(0 0 0 / 85%);
+    background-image: linear-gradient(to right,#197568,#488C83, #4FFFDC );
     backdrop-filter: blur(10px); /* PARA DEIXAR O DESFOQUE NO FUNDO DO MENU */
     transition: 0.6s;
     z-index: 1000;
