--- a/estilos/home/especialidades.css
+++ b/estilos/home/especialidades.css
@@ -60,6 +60,10 @@
   border-radius: 24px;
 }
 
+.especilidades-itens li .btn{
+  margin: 0 auto;
+}
+
 .especilidades-itens li:first-child, .especilidades-itens li:last-child{
   position: relative;
   top: 40px;
@@ -113,42 +117,5 @@
 @media (max-width: 900px){
   .especilidades-itens .btn{
     display: block;
-    margin-left: 100px;
-  }
-}
-
-@media (max-width: 535px){
-  .especilidades-itens .btn{
-    display: block;
-    margin-left: 86px;
-  }
-}
-
-@media (max-width: 494px){
-  .especilidades-itens .btn{
-    display: block;
-    margin-left: 66px;
-  }
-}
-
-@media (max-width: 472px){
-  .especilidades-itens .btn{
-    display: block;
-    margin-left: 55px;
-  }
-}
-
-
-@media (max-width: 464px){
-  .especilidades-itens .btn{
-    display: block;
-    margin-left: 47px;
-  }
-}
-
-@media (max-width: 420px){
-  .especilidades-itens .btn{
-    display: block;
-    margin-left: 32px;
   }
 }
