--- a/estilos/home/especialidades.css
+++ b/estilos/home/especialidades.css
@@ -58,12 +58,30 @@
   border: 3px solid #11a72a;
   padding: 85px 40px;
   border-radius: 24px;
+  position: absolute;
 }
 
-.especilidades-itens li .btn{
+/* CONSEGUIR MANIPULAR A POSIÇÃO DOS BOTOES */
+.especilidades-itens li .btn-1{
   margin: 0 auto;
+  position: relative;
+  top: 20px;
 }
 
+.especilidades-itens li .btn-2{
+  margin: 0 auto;
+  position: relative;
+  top: 50px;
+}
+
+.especilidades-itens li .btn-3{
+  margin: 0 auto;
+  position: relative;
+  top: 70px;
+}
+/* CONSEGUIR MANIPULAR A POSIÇÃO DOS BOTOES */
+
+ /* EFEITO DE FLUTUAR AO PASSAR O MOUSE EM CIMA */
 .especilidades-itens li:first-child, .especilidades-itens li:last-child{
   position: relative;
   top: 40px;
@@ -83,14 +101,11 @@
 .especilidades-itens li:nth-child(2):hover{
   top: -25px;
 }
+ /* EFEITO DE FLUTUAR AO PASSAR O MOUSE EM CIMA */
 
 .especilidades-itens li p{
   font-size: 1rem;
   max-width: 40ch;
-}
-
-.especilidades-itens .btn{
-  justify-self: center;
 }
 
 .especilidades-itens .btn:hover{
@@ -119,3 +134,34 @@
     display: block;
   }
 }
+
+/* BOTÕES BOTÕES BTN !!!!!! */
+
+@media (max-width:1165px){
+  .especilidades-itens li .btn-3{
+    margin: 0 auto;
+    position: relative;
+    top: 120px;
+  }
+}
+
+@media (max-width:1125px){
+  .especilidades-itens li .btn-1{
+    margin: 0 auto;
+    position: relative;
+    top: 20px;
+  }
+  
+  .especilidades-itens li .btn-2{
+    margin: 0 auto;
+    position: relative;
+    top: 20px;
+  }
+  
+  .especilidades-itens li .btn-3{
+    margin: 0 auto;
+    position: relative;
+    top: 20px;
+  }
+  }
+/* BOTÕES BOTÕES BTN !!!!!! */
