--- a/estilos/home/especialidades.css
+++ b/estilos/home/especialidades.css
@@ -17,7 +17,7 @@
 
 .especialidades-conteudo h1{
   margin-bottom: 10px;
-  font-size: 3rem;
+  font-size: 3.5rem;
   text-transform: uppercase;
   letter-spacing: 4px;
   font-family: 'Righteous', sans-serif;
@@ -140,11 +140,16 @@
   }
 }
 
+@media (max-width:550px){
+  .especialidades-conteudo h1{
+    font-size: 3rem;
+  }
+}
+
 @media (max-width:500px){
   .especialidades-conteudo h1{
     font-size: 2.2rem;
   }
-  
 }
 
 /* BOTÕES BOTÕES BTN !!!!!! */
