--- a/estilos/home/sobre.css
+++ b/estilos/home/sobre.css
@@ -35,6 +35,10 @@
 
 
 @media (max-width:500px){
+  .sobre-conteudo h1{
+    font-size: 2.2rem;
+  }
+
   .sobre-conteudo p{
     font-size: 1.125rem;
   }
