--- a/estilos/home/sobre.css
+++ b/estilos/home/sobre.css
@@ -11,12 +11,25 @@
   margin-top: 80px;
 }
 
-.sobre-conteudo h1{
+.sobre-descricao h1{
   font-size: 3.4rem;
   margin-bottom: 20px;
+  position: relative;
 }
 
-.sobre-conteudo p{
+.sobre-descricao h1::before{
+  content: "";
+  display: block;
+  width: 130px;
+  height: 100px;
+  background: url(../../images/detalhe.svg) no-repeat center center;
+  position: absolute;
+  z-index: -1;
+  top: -15px;
+  left: -40px;
+}
+
+.sobre-descricao p{
   font-size: 1.3rem;
   margin-bottom: 20px;
   line-height: 1.8;
@@ -31,15 +44,32 @@
   .sobre-conteudo{
     grid-template-columns: 1fr;
   }
+
+  .sobre-descricao h1::before{
+    content: "";
+    display: block;
+    margin-top: 10px;
+    width: 100px;
+    height: 6px;
+    background-color: var(--cor-2);
+    position: absolute;
+    z-index: -1;
+    top: 1px;
+    left: 0px;
+  }
 }
 
 
 @media (max-width:500px){
-  .sobre-conteudo h1{
+  .sobre-descricao h1{
     font-size: 2.6rem;
   }
 
-  .sobre-conteudo p{
+  .sobre-descricao h1::before{
+    top: -3px;
+  }
+
+  .sobre-descricao p{
     font-size: 1.125rem;
   }
 }
