--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,6 +4,7 @@
 @import "./home/inicio.css";
 @import "./home/especialidades.css";
 @import "./home/sobre.css";
+@import "./home/projetos.css";
 
 @import "./global/ultilidades/tipografia.css";
 @import "./global/ultilidades/colors.css";
