--- a/estilos/home/projetos.css
+++ b/estilos/home/projetos.css
@@ -192,11 +192,25 @@
 }
 
 @media (max-width:900px){
+  .projeto-2{
+    padding-left: 0px;
+    gap: 0px;
+  }
+
   .projeto-2 h2{
     padding-left: 30px;
     font-size: 2.3rem;
+    padding-top: 30px;
   }
 
-  .projeto-2{
+    .projeto-2 p{
+    padding: 0px 10px;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .projeto-2 .link-projeto{
+    margin-bottom: 30px;
+    margin-left: 30px;
   }
 }
