--- a/estilos/home/projetos.css
+++ b/estilos/home/projetos.css
@@ -48,7 +48,7 @@
   gap: 120px;
   margin: 0 auto;
   align-items: center;
-  background-color: #488C83;
+  background-color: #2dd9c2;
   border-radius: 18px;
 }
 
@@ -83,7 +83,7 @@
   gap: 0px;
   margin: 0 auto;
   align-items: center;
-  background-color: #488C83;
+  background-color: #2dd9c2;
   border-radius: 18px;
   padding-left: 120px;
 }
@@ -128,7 +128,7 @@
   gap: 120px;
   margin: 0 auto;
   align-items: center;
-  background-color: #488C83;
+  background-color: #2dd9c2;
   border-radius: 18px;
 }
 
