--- a/estilos/home/projetos.css
+++ b/estilos/home/projetos.css
@@ -53,7 +53,7 @@
 }
 
 .projeto-1:hover{
-  background-color: #38c7b4;
+  background-image: linear-gradient(to bottom, #4FFFDC, #488C83, #26ad9b);
 }
 
 .projeto-1 h2{
@@ -89,7 +89,7 @@
 }
 
 .projeto-2:hover{
-  background-color: #38c7b4;
+  background-image: linear-gradient(to bottom, #4FFFDC, #488C83, #26ad9b);
 }
 
 
@@ -133,7 +133,7 @@
 }
 
 .projeto-3:hover{
-  background-color: #38c7b4;
+  background-image: linear-gradient(to bottom, #4FFFDC, #488C83, #26ad9b);
 }
 
 .projetos-conteudo .projeto-3 img{
