--- a/estilos/home/especialidades.css
+++ b/estilos/home/especialidades.css
@@ -24,6 +24,22 @@
   color: black;
 }
 
+.especialidades-conteudo h1::after{
+  content: "|";
+  margin-left: 5px;
+  opacity: 1;
+  animation: pisca .7s infinite;
+}
+
+@keyframes pisca{
+  0%,100%{
+    opacity: 1;
+  }
+
+  50%{
+    opacity: 0;
+  }
+}
 
 .especialidades-conteudo p{
   margin-bottom: 50px;
