--- a/estilos/home/projetos.css
+++ b/estilos/home/projetos.css
@@ -24,6 +24,23 @@
   color: black;
 }
 
+.projetos-conteudo h1::after{
+  content: "|";
+  margin-left: 5px;
+  opacity: 1;
+  animation: pisca .7s infinite;
+}
+
+@keyframes pisca{
+  0%,100%{
+    opacity: 1;
+  }
+
+  50%{
+    opacity: 0;
+  }
+}
+
 .projetos-conteudo p {
   margin-bottom: 50px;
   line-height: 1.5;
