--- a/estilos/home/especialidades.css
+++ b/estilos/home/especialidades.css
@@ -24,6 +24,7 @@
   color: black;
 }
 
+/* EFEITO MAQUINA DE ESCREVER
 .especialidades-conteudo h1::after{
   content: "|";
   margin-left: 5px;
@@ -40,7 +41,7 @@
     opacity: 0;
   }
 }
-
+*/
 .especialidades-conteudo p{
   margin-bottom: 50px;
   line-height: 1.5;
