--- a/estilos/home/projetos.css
+++ b/estilos/home/projetos.css
@@ -24,6 +24,7 @@
   color: black;
 }
 
+/* EFEITO MAQUINA DE ESCREVER
 .projetos-conteudo h1::after{
   content: "|";
   margin-left: 5px;
@@ -40,6 +41,7 @@
     opacity: 0;
   }
 }
+*/
 
 .projetos-conteudo p {
   margin-bottom: 50px;
