--- a/estilos/style.css
+++ b/estilos/style.css
@@ -77,3 +77,33 @@
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
+
+@media (max-width:700px){
+  .js-li-scroll1{
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+    transition: .5s;
+  }
+  
+
+  .js-li-scroll3{
+    opacity: 0;
+    transform: translate3d(30px, 0, 0);
+    transition: .5s;
+  }
+}
+
+@media (max-width:600px){
+  .js-li-scroll1{
+    opacity: 0;
+    transform: translate3d(-20px, 0, 0);
+    transition: .5s;
+  }
+  
+
+  .js-li-scroll3{
+    opacity: 0;
+    transform: translate3d(20px, 0, 0);
+    transition: .5s;
+  }
+}
