--- a/estilos/style.css
+++ b/estilos/style.css
@@ -93,6 +93,21 @@
     transition: .5s;
   }
 }
+
+@media (max-width:500px){
+  .js-li-scroll1{
+    opacity: 0;
+    transform: translate3d(-20px, 0, 0);
+    transition: .5s;
+  }
+  
+
+  .js-li-scroll3{
+    opacity: 0;
+    transform: translate3d(20px, 0, 0);
+    transition: .5s;
+  }
+}
 /* PROJETO ANIMA SCROLL PARA ESPECIALIADES */
 
 /* PROJETO ANIMA SCROLL PARA PROJETOS */
@@ -127,4 +142,20 @@
 .js-projeto3.ativo{
   opacity: 1;
   transform: translate3d(0, 0, 0);
+}
+
+
+@media (max-width:585px){
+  .js-projeto1{
+    opacity: 0;
+    transform: translate3d(-20px, 0, 0);
+    transition: .5s;
+  }
+  
+
+  .js-projeto3{
+    opacity: 0;
+    transform: translate3d(20px, 0, 0);
+    transition: .5s;
+  }
 }
