--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,6 +5,7 @@
 @import "./home/especialidades.css";
 @import "./home/sobre.css";
 @import "./home/projetos.css";
+@import "./home/footer.css";
 
 
 @import "./global/ultilidades/colors.css";
